updated azure pipelines config - added task to publish test results

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -9,7 +9,12 @@ pool:
 steps:
 - script: |
     sudo apt install -y python-pip
-    sudo pip install numpy
+    sudo pip install -r requirements.yml
     python tests.py
   workingDirectory: string-calculator/python
   displayName: 'Run String-Calculator Python Tests'
+- task: PublishTestResults@2
+    inputs:
+      testResultsFormat: 'JUnit'
+      testResultsFiles: '**/test-reports/TEST-*.xml'
+      searchFolder: 'string-calculator/python'
