--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -9,7 +9,7 @@ pool:
 steps:
 - script: |
     sudo apt install -y python-pip
-    sudo pip install -r requirements.yml
+    sudo pip install -r requirements.txt
     python tests.py
   workingDirectory: string-calculator/python
   displayName: 'Run String-Calculator Python Tests'
