--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -8,7 +8,7 @@ pool:
 
 steps:
 - script: |
-    sudo apt install -y python-pip
+    sudo apt-get install -y python-pip python-setuptools
     sudo pip install -r requirements.txt
     python tests.py
   workingDirectory: string-calculator/python
